# OpenGL-IMGUI-VarPanel

./: CMakeLists.txt  README.md  bootstrap-msvc.bat  vcpkg.json
EditorFrame/: CMakeLists.txt
EditorFrame/EditorFrame/: Editor.cpp  EditorData.h  EditorLayer.cpp  EditorLayer.h  FPSMonitor.cpp  FPSMonitor.hpp  TestEditorLayer.cpp  TestEditorLayer.h  TestScene.cpp  TestScene.h
EditorFrame/EditorFrame/Panels/: ContentBrowserPanel.cpp  SceneHierarchyPanel.cpp  SceneTesterPanel.cpp  SceneTesterPanel.h  TypeTesterPanel.cpp  TypeTesterPanel.h  VariablePanel.cpp  VariablePanel.hpp
EditorFrame/EditorFrame/Treeview/: Listener.cpp  Listener.hpp  Node.cpp  Node.hpp  VariableFolder.cpp  VariableFolder.hpp  VariableNode.cpp  VariableNode.hpp  VariableValue.cpp  VariableValue.hpp  string_view_utils.cpp  string_view_utils.hpp
EditorFrame/SandboxProject/: Sandbox.hproj
EditorFrame/working_dir/: .gitignore
EditorFrame/working_dir/assets/shaders/: FlatColor.glsl  Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl
SimpleHazel/: .gitignore  CMakeLists.txt  README.md  bootstrap-msvc.bat  vcpkg.json
SimpleHazel/DockingRangeSelectImGUI/: CMakeLists.txt
SimpleHazel/DockingRangeSelectImGUI/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_widgets.cpp
SimpleHazel/DockingRangeSelectImGUI/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.h
SimpleHazel/DockingRangeSelectImGUI/imguizmo/: GraphEditor.cpp  GraphEditor.h  ImCurveEdit.cpp  ImCurveEdit.h  ImGradient.cpp  ImGuizmo.cpp  ImGuizmo.h  ImSequencer.cpp
SimpleHazel/ForcePanel/: CMakeLists.txt
SimpleHazel/ForcePanel/ForcePanel/: ForcePanel.cpp  ForcePanel.hpp  ForcePanel_exports.hpp
SimpleHazel/ForcePanel/Widgets/: imgui_scopes.hpp  imgui_utils.h  imgui_widgets.cpp  imgui_widgets.h
SimpleHazel/Hazel/: CMakeLists.txt
SimpleHazel/Hazel/src/: Hazel.h  Hazel_exports.h  hzpch.h
SimpleHazel/Hazel/src/Hazel/Core/: Application.cpp  Application.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Window.h
SimpleHazel/Hazel/src/Hazel/Events/: ApplicationEvent.h
SimpleHazel/Hazel/src/Hazel/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
SimpleHazel/Hazel/src/Hazel/Math/: Math.cpp  Math.h
SimpleHazel/Hazel/src/Hazel/Project/: Project.h  ProjectSerializer.cpp
SimpleHazel/Hazel/src/Hazel/Renderer/: Buffer.h  Camera.h  EditorCamera.h  Framebuffer.h  OrthographicCameraController.h  RenderCommand.h  Renderer2D.h  Texture.cpp  Texture.h
SimpleHazel/Hazel/src/Hazel/Scene/: Entity.h  Scene.cpp  Scene.h  SceneCamera.h  SceneSerializer.h
SimpleHazel/Hazel/src/Hazel/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptEngineNULL.cpp  ScriptGlue.cpp  ScriptGlueNULL.cpp
SimpleHazel/Hazel/src/Hazel/Utils/: PlatformUtils.h
SimpleHazel/Hazel/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLShader.cpp  OpenGLTexture.cpp
SimpleHazel/Hazel/src/Platform/Windows/: WindowsWindow.cpp
